--- a/site/module3-solution/css/styles.css
+++ b/site/module3-solution/css/styles.css
@@ -1,8 +1,8 @@
 body {
 	font-size: 16px;
-	color: #462300;
-	background-color: #c30000;
-	font-family: Arial, Helvetica, sans-serif;;
+	color: black;
+	background-color: #e0e0e0;
+	font-family: Montserrat, Arial, Helvetica, sans-serif;
 }
 
 #header-nav {
@@ -19,7 +19,7 @@ body {
 	color:  #c30000;
 	font-size: 1.3em;
 	text-transform: uppercase;
-	font-weight: bold;
+	font-weight: 900;
 	margin-top: 0;
 	margin-bottom: 0;
 }
@@ -38,20 +38,26 @@ body {
 
 
 .navbar-header button.navbar-toggle:hover {
-	background-color: #c30000;
+	background-color: white;
 }
 
 .card-content {
 	background-color: white;
-	padding: 20px;
+	padding: 20px 40px;
 	margin-top: 20px;
-	font-family: "Lucida Console", "Courier New", monospace;
 	font-size: 1em;
+	font-weight: 400;
 	width: 100%;
 }
 
+.card-content h3{
+	font-weight: 800;
+
+}
+
+
 .card-content:hover {
-	box-shadow:0 5px 30px 5px black ;
+	box-shadow:0 5px 30px 5px #b2b2b2 ;
 }
 
 .row {
@@ -66,7 +72,7 @@ body {
 	text-align: center;
 	color: #462300;
 	text-transform: capitalize;
-	font-weight: bold;
+	font-weight: 800;
 }
 
 #nav-list a:hover{
@@ -76,6 +82,6 @@ body {
 
 #title {
 	font-size: 2.5em;
-	font-weight: bold;
-	color: white;
+	font-weight: 900;
+	color: #c30000;
 }
